# DataIntegrityGroth16Proof2026

./: Cargo.toml  README.md
holder_files/: w3c_credential.json
poseidon-hash/: Cargo.toml
poseidon-hash/src/: main.rs
src/: main.rs
zkp-biometric/: Cargo.toml
zkp-biometric/src/: cache.rs  crypto.rs  error.rs  lib.rs  main.rs  suite.rs  types.rs
zkp-credentials-w3c/: Cargo.toml  alice.json  alice_w3c.json
zkp-credentials-w3c/examples/: cryptosuite_demo.rs  demo.rs
zkp-credentials-w3c/src/: core.rs  credential.rs  cryptosuite.rs  error.rs  lib.rs
zkp-credentials-w3c/tests/: tests.rs
