[package]
name = "groth16-cryptosuite"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1