[package]
name = "w3c-data-integrity-groth16"
version = "1.0.0"
edition = "2021"

[dependencies]
ark-bn254 = "=0.4.0"
ark-ff = "=0.4.0"
ark-groth16 = "=0.4.0"
ark-relations = "=0.4.0"
ark-r1cs-std = "=0.4.0"
ark-snark = "=0.4.0"
ark-serialize = "=0.4.2"
ark-std = "=0.4.0"
sha2 = "0.10.8"
rand = "0.8.5"