[package]
name = "zk-credential-w3c"
version = "0.1.0"
edition = "2021"
description = "W3C Verifiable Credentials with Zero-Knowledge Proofs"

[dependencies]
ark-bn254 = "=0.4.0"
ark-ff = "=0.4.0"
ark-groth16 = "=0.4.0"
ark-relations = "=0.4.0"
ark-r1cs-std = "=0.4.0"
ark-snark = "=0.4.0"
ark-serialize = "=0.4.2"
ark-std = "=0.4.0"
sha2 = "0.10.8"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4" 

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "cryptosuite_demo"
path = "examples/cryptosuite_demo.rs"


